fixes files names and spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body {
-  background-color #ccc;
-  font:sans-serif;
+  background-color: #ccc;
+  font: sans-serif;
 }
 
 h1 {
